# human-galgee-system-ailab

./: .gitignore  .gitmodules  README.md  README_UBUNTU.md  human-galgee-system-ailab.code-workspace  pyproject.toml
doc/美少女ヘッドフォン/: Main.py
human_galgee_system/: __main__.py
human_galgee_system/utils/: __init__.py
human_galgee_system/visual_tranceformer/: visual_tranceformer.py
human_galgee_system/voice_tranceformer/: voice_tranceformer.py
tests/camera_tests/: camera_test.py  check_camera_connection.py
tests/stable_diffusion_tests/: python_sd_img2imgtest.py  python_sd_test.py
