[project]
name = "human-galgee-system"
version = "0.1.0"
description = "Human Galgee System"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "webuiapi (>=0.9.17,<0.10.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
